fixed ugly background in dropdown menu, added flex wrap to nav

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,8 +1,9 @@
 /* Jessica Kincaid 
 
+jessicakincaid.com
 public_html revision
 
-July 20, 2019
+July 21, 2019
 
 
 /* color palette
@@ -34,14 +35,6 @@ body {
     width: 98%;
 }
 
-h1.name {
-    font-size: 4.5vw;
-    margin: 0;
-    padding-top: 5vw;
-    color: rgb(165, 177, 149);
-    text-transform: uppercase;
-}
-
 h2.headline {
     font-size: 4.5vw;
     padding: 0.25vw 0 0 6vw;
@@ -58,7 +51,6 @@ p {
 }
 
 div.hero h2 {
-    /* color: rgb(113, 160, 52); */
     font-size: 1.75em;
 }
 
@@ -69,17 +61,15 @@ a {
     color: #fff;
 }
 
-h2,
-h3 {
-    margin-top: 0;
-}
-
 a {
     text-decoration: none;
 }
 
 img {
     max-width: 100%;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 div.primary-col h2,
@@ -100,50 +90,42 @@ div.secondary-col h2 {
 /*------------------------LINKS--------------------------*/
 
 
-/* color palette
-lightest gray = color: rgb(165, 177, 149);
-light greenish gray = color: rgb(165, 177, 149);
-slate greenish gray =  color: rgb(119, 128, 108);
-Pale highlight citrus yellow = color: rgb(186, 245, 109);
-Bright lime = color: rgb(142, 243, 11);
-Dark green = background-color: rgb(26, 51, 0);  
-Darkest green =  background-color: rgb(13, 26, 0);
-*/
-
-
 /*---------NAVIGATION----------*/
+
+.top-nav,
+div.dropdown {
+    display: flex;
+    flex-wrap: wrap;
+}
 
 .name a,
 .top-nav a {
-    font-size: .95em;
+    font-size: 1.25em;
     text-transform: uppercase;
     text-align: center;
-    /* display: flex;
-    flex-wrap: wrap; */
-    display: block;
-    padding: 10px 15px;
     background-color: rgb(13, 26, 0);
 }
 
 ul.top-nav {
     background-color: rgb(13, 26, 0);
-    margin: 0;
+    margin: 1vw 0;
+    padding: 0;
 }
 
 ul.top-nav li {
-    max-width: 4em;
+    max-width: 8vw;
+    display: block;
+    margin: 2vw 3vw;
+    padding-left: 5vw;
 }
 
-
-/* ul li div.dropdown div.dropdown-content a {
-    max-width: 4em;
-} */
-
-ul.top-nav li a:hover {
+ul.top-nav li a:hover,
+.dropbtn {
     color: #7EB834;
 }
 
-ul.top-nav li a:active {
+ul.top-nav li a:active,
+.dropbtn {
     color: rgb(142, 243, 11);
     background-color: rgb(50, 80, 14);
 }
@@ -151,14 +133,9 @@ ul.top-nav li a:active {
 
 /* ---- Dropdown Theme submenu  ---- */
 
-div.dropdown {
-    margin-top: 5px;
-    padding: 5px;
-}
-
 .dropbtn {
-    font-size: .95em;
-    color: rgb(186, 245, 109);
+    font-size: 1.25em;
+    /* color: rgb(186, 245, 109); */
     text-transform: uppercase;
     background-color: rgb(13, 26, 0);
     border: none;
@@ -169,24 +146,24 @@ div.dropdown {
     position: absolute;
     background-color: rgb(13, 26, 0);
     z-index: 1;
-    /* max-width: 8em;
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: flex-start; */
+    max-width: 10em;
+    text-align: center;
 }
 
 .dropdown-content a {
     color: rgb(142, 243, 11);
-    padding: 12px 16px;
-    max-width: 2vw;
+    padding: .75em 2.5em;
+    max-width: 8vw;
+    font-size: 1em;
     text-decoration: none;
-    text-align: center;
     display: block;
 }
 
 .dropdown-content a:hover {
+    padding: .5em 3.5em;
     color: rgb(215, 223, 204);
-    background-color: rgb(50, 80, 14);
+    background-color: rgb(13, 26, 0);
+    text-align: center;
 }
 
 .dropdown-content a:visited {
@@ -194,6 +171,7 @@ div.dropdown {
 }
 
 .dropdown:hover .dropdown-content {
+    text-align: center;
     display: block;
 }
 
@@ -201,6 +179,8 @@ div.dropdown {
 /* ---- Layout Containers ---- */
 
 header.main-header {
+    display: flex;
+    flex-wrap: wrap;
     margin: auto;
     width: 95%;
     padding-top: .5em;
@@ -237,17 +217,20 @@ div.hero {
     margin-bottom: 0;
 }
 
+h1.name {
+    font-size: 4.5vw;
+    margin: 0;
+    padding: 5vw 3vw 0 5vw;
+    color: rgb(165, 177, 149);
+    text-transform: uppercase;
+}
+
 h1 a:visited {
     color: rgb(119, 128, 108);
 }
 
 h1 a:hover {
     color: rgb(142, 243, 11);
-}
-
-h2 {
-    padding: 0.75em;
-    font-size: 3vw;
 }
 
 h3 {
@@ -266,24 +249,6 @@ div.hero {
     margin: auto;
     background-color: rgb(13, 26, 0);
     color: rgb(215, 223, 204);
-}
-
-h1 {
-    background-color: rgb(13, 26, 0);
-    color: rgb(215, 223, 204);
-    font-size: 4vw;
-    padding: 0.15em;
-    border-radius: 3px;
-}
-
-
-/*------Images, details, concepts, descriptions -----------------*/
-
-img {
-    max-width: 100%;
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
 }
 
 ul.detail-list li {
